solve all ".get(0) can be replaced with .getFirst()" IDE warnings